Time: 38 ms (32.90%), Space: 51.9 MB (45.99%) - LeetHub